--- a/careers.html
+++ b/careers.html
@@ -26,43 +26,72 @@
     <header>
         <div class="container">
             <div class="row">
-                <nav class="navbar navbar-expand-lg ">
+                <nav class="navbar navbar-expand-lg">
                     <div class="container">
-                      <a class="navbar-brand fs-4" href="index.html">
-                        <img class="logo-img" src="assets/images/LogoWithDescription.png" alt="Goodies Logo">
-                      </a>
-                      <!-- Toggle Button -->
-                      <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                        <span class="menu-button bx bx-menu"></span>
-                      </button>
-                      <!-- SideBar -->
-                      <div class="sidebar offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                        <div class="offcanvas-header border-bottom">
-                          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Goodies Egypt</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <a class="navbar-brand fs-4" href="index.html">
+                            <img class="logo-img" src="assets/images/LogoWithDescription.png" alt="Goodies Logo" />
+                        </a>
+                        <!-- Toggle Button -->
+                        <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                            <span class="menu-button bx bx-menu"></span>
+                        </button>
+                        <!-- SideBar -->
+                        <div class="sidebar offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                            aria-labelledby="offcanvasNavbarLabel">
+                            <div class="offcanvas-header border-bottom">
+                                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+                                    Goodies Egypt
+                                </h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 fs-5">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="index.html"
+                                            data-lan="home">Home</a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                            data-bs-toggle="dropdown" aria-expanded="false" data-lan="aboutus">
+                                            AboutUS
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a class="dropdown-item" href="#story" data-lan="ourstory">Our story</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="#mission" data-lan="mission">Mission</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="#vision" data-lan="vision">Vision</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link" href="#export" data-lan="export">Export</a>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link" href="media.html" data-lan="media">Media</a>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link" href="careers.html" data-lan="careers">Careers</a>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link" href="contactUs.html" data-lan="contactus">Contact Us</a>
+                                    </li>
+                                    <li>
+                                        <select id="lanselect">
+                                            <option value="en" data-lan="english" selected>
+                                                English
+                                            </option>
+                                            <option value="ar" data-lan="arabic">Arabic</option>
+                                        </select>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="offcanvas-body">
-                          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 fs-5">
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                AboutUS
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#story">Our story</a></li>
-                                <li><a class="dropdown-item" href="#mission">Mission</a></li>
-                                <li><a class="dropdown-item" href="#vision">Vision</a></li>
-                              </ul>
-                            </li>
-                            <li class="nav-item mx-2"><a class="nav-link" href="#export">Export</a></li>
-                            <li class="nav-item mx-2"><a class="nav-link" href="media.html">Media</a></li>
-                            <li class="nav-item mx-2"><a class="nav-link" href="careers.html">Careers</a></li>
-                            <li class="nav-item mx-2"><a class="nav-link" href="contactUs.html">Contact Us</a></li>
-                          </ul>
-                        </div>
-                      </div>
                     </div>
                 </nav>
             </div>
@@ -74,24 +103,24 @@
                 <img src="./Assets/images/casual-life-3d-19 1.png" alt="avatar" class="img-fluid">
             </div>
             <div class="col-md-6">
-                <h3 class="text-center title">Careers</h3>
-                <p class="text-center">Join our team.</p>
+                <h3 class="text-center title" data-lan="careers">Careers</h3>
+                <p class="text-center" data-lan="jointeam">Join our team.</p>
                 <form>
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label for="name" class="form-label">Name</label>
+                            <label for="name" class="form-label" data-lan="namelabel">Name</label>
                             <input type="text" class="form-control" id="name">
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="birthdate" class="form-label">Birth Date</label>
+                            <label for="birthdate" class="form-label" data-lan="datelabel">Birth Date</label>
                             <input type="date" class="form-control" id="birthdate">
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="email" class="form-label">Email address</label>
+                            <label for="email" class="form-label" data-lan="maillabel">Email address</label>
                             <input type="email" class="form-control" id="email">
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="job" class="form-label">Job</label>
+                            <label for="job" class="form-label" data-lan="jobtype">Job</label>
                             <select class="form-control" id="job">
                                 <option value="">Sales</option>
                                 <option value="">Backoffice</option>
@@ -99,16 +128,16 @@
                             </select>
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="cv" class="form-label">CV</label>
+                            <label for="cv" class="form-label" data-lan="resumeatt">CV</label>
                             <input type="file" class="form-control" id="cv">
                         </div>
                         <div class="col-md-12 mb-3">
-                            <label for="message" class="form-label">Message</label>
+                            <label for="message" class="form-label" data-lan="proposal">Message</label>
                             <textarea class="form-control" id="message"></textarea>
                         </div>
                         <div class="col-md-12 mb-3">
                             <div class="buttons text-center">
-                                <button class="blob-btn btn btn-primary">
+                                <button class="blob-btn btn btn-primary" data-lan="applynow">
                                     Send Message
                                     <span class="blob-btn__inner">
                                         <span class="blob-btn__blobs">
@@ -146,36 +175,55 @@
         </div>
         <p>&copy; 2023 Goodies Egypt</p>
     </footer> -->
+    <!-- ***********footer************* -->
+
     <footer class="nav m-0">
         <div class="social-media text-center">
-        <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-xl"></i></a>
-        <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
-        <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-        <a href="https://www.twitter.com/"><i class="fa-brands fa-square-twitter fa-xl"></i></a>
-        <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
-    </div>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-xl"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+            <a href="https://www.twitter.com/"><i class="fa-brands fa-square-twitter fa-xl"></i></a>
+            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
+        </div>
+        <div>
             <ul class="nav">
-                <li class="nav-item m-2"><a href="index.html">Home</a></li>
-                <li class="nav-item m-2"><a href="index.html#export">Export</a></li>
-                <li class="nav-item m-2"><a href="media.html">Media</a></li>
-                <li class="nav-item m-2"><a href="careers.html">Careers</a></li>
-                <li class="nav-item m-2"><a href="contactUs.html">Contact Us</a></li>
+                <li class="nav-item m-2">
+                    <a href="index.html" data-lan="home">Home</a>
+                </li>
+                <li class="nav-item m-2">
+                    <a href="index.html#export" data-lan="export">Export</a>
+                </li>
+                <li class="nav-item m-2">
+                    <a href="media.html" data-lan="media">Media</a>
+                </li>
+                <li class="nav-item m-2">
+                    <a href="careers.html" data-lan="careers">Careers</a>
+                </li>
+                <li class="nav-item m-2">
+                    <a href="contactUs.html" data-lan="contactus">Contact Us</a>
+                </li>
                 <li class="nav-item m-2"><a href="#">العربية</a></li>
             </ul>
-    <div class="row text-center"><p>&copy; 2023 Goodies Egypt</p></div>
+        </div>
+        <div class="row text-center">
+            <p>&copy; 2023 Goodies Egypt</p>
+        </div>
     </footer>
 
-
-<!-- ********************************** -->
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-    AOS.init({
-        duration: 3000,
-        once: true,
-    });
-</script>
-<script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/script.js"></script>
+    <!-- ********************************** -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 3000,
+            once: true,
+        });
+    </script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="assets/js/languageAdd.js"></script>
 
 
 </body>
