--- a/media.html
+++ b/media.html
@@ -30,52 +30,80 @@
     <header>
         <div class="container">
             <div class="row">
-                <nav class="navbar navbar-expand-lg ">
+                <nav class="navbar navbar-expand-lg">
                     <div class="container">
-                      <a class="navbar-brand fs-4" href="index.html">
-                        <img class="logo-img" src="assets/images/LogoWithDescription.png" alt="Goodies Logo">
-                      </a>
-                      <!-- Toggle Button -->
-                      <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                        <span class="menu-button bx bx-menu"></span>
-                      </button>
-                      <!-- SideBar -->
-                      <div class="sidebar offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                        <div class="offcanvas-header border-bottom">
-                          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Goodies Egypt</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <a class="navbar-brand fs-4" href="index.html">
+                            <img class="logo-img" src="assets/images/LogoWithDescription.png" alt="Goodies Logo" />
+                        </a>
+                        <!-- Toggle Button -->
+                        <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                            <span class="menu-button bx bx-menu"></span>
+                        </button>
+                        <!-- SideBar -->
+                        <div class="sidebar offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                            aria-labelledby="offcanvasNavbarLabel">
+                            <div class="offcanvas-header border-bottom">
+                                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+                                    Goodies Egypt
+                                </h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 fs-5">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="index.html"
+                                            data-lan="home">Home</a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                            data-bs-toggle="dropdown" aria-expanded="false" data-lan="aboutus">
+                                            AboutUS
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a class="dropdown-item" href="#story" data-lan="ourstory">Our story</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="#mission" data-lan="mission">Mission</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="#vision" data-lan="vision">Vision</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link" href="#export" data-lan="export">Export</a>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link" href="media.html" data-lan="media">Media</a>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link" href="careers.html" data-lan="careers">Careers</a>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link" href="contactUs.html" data-lan="contactus">Contact Us</a>
+                                    </li>
+                                    <li>
+                                        <select id="lanselect">
+                                            <option value="en" data-lan="english" selected>
+                                                English
+                                            </option>
+                                            <option value="ar" data-lan="arabic">Arabic</option>
+                                        </select>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="offcanvas-body">
-                          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 fs-5">
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                AboutUS
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#story">Our story</a></li>
-                                <li><a class="dropdown-item" href="#mission">Mission</a></li>
-                                <li><a class="dropdown-item" href="#vision">Vision</a></li>
-                              </ul>
-                            </li>
-                            <li class="nav-item mx-2"><a class="nav-link" href="#export">Export</a></li>
-                            <li class="nav-item mx-2"><a class="nav-link" href="media.html">Media</a></li>
-                            <li class="nav-item mx-2"><a class="nav-link" href="careers.html">Careers</a></li>
-                            <li class="nav-item mx-2"><a class="nav-link" href="contactUs.html">Contact Us</a></li>
-                          </ul>
-                        </div>
-                      </div>
                     </div>
                 </nav>
             </div>
         </div>
     </header>
-
     <main class="media">
     <div class="overlay">
-        <h3>Media <span>and</span> News</h3>
+        <h3 data-lan="mediaandnews">Media <span>and</span> News</h3>
     </div>
     </main>
     <div class="container" style="margin-top: 60px;">
@@ -141,31 +169,47 @@
         </div>
     </div>
 
+    <!-- ***********footer************* -->
+
     <footer class="nav m-0">
         <div class="social-media text-center">
-        <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-xl"></i></a>
-        <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
-        <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-        <a href="https://www.twitter.com/"><i class="fa-brands fa-square-twitter fa-xl"></i></a>
-        <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
-    </div>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-xl"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+            <a href="https://www.twitter.com/"><i class="fa-brands fa-square-twitter fa-xl"></i></a>
+            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
+        </div>
+        <div>
             <ul class="nav">
-                <li class="nav-item m-2"><a href="index.html">Home</a></li>
-                <li class="nav-item m-2"><a href="index.html#export">Export</a></li>
-                <li class="nav-item m-2"><a href="media.html">Media</a></li>
-                <li class="nav-item m-2"><a href="careers.html">Careers</a></li>
-                <li class="nav-item m-2"><a href="contactUs.html">Contact Us</a></li>
+                <li class="nav-item m-2">
+                    <a href="index.html" data-lan="home">Home</a>
+                </li>
+                <li class="nav-item m-2">
+                    <a href="index.html#export" data-lan="export">Export</a>
+                </li>
+                <li class="nav-item m-2">
+                    <a href="media.html" data-lan="media">Media</a>
+                </li>
+                <li class="nav-item m-2">
+                    <a href="careers.html" data-lan="careers">Careers</a>
+                </li>
+                <li class="nav-item m-2">
+                    <a href="contactUs.html" data-lan="contactus">Contact Us</a>
+                </li>
                 <li class="nav-item m-2"><a href="#">العربية</a></li>
             </ul>
-    <div class="row text-center"><p>&copy; 2023 Goodies Egypt</p></div>
+        </div>
+        <div class="row text-center">
+            <p>&copy; 2023 Goodies Egypt</p>
+        </div>
     </footer>
 
-<!-- ********************************** -->
+    <!-- ********************************** -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init({
-        duration: 3000,
-        once: true,
+            duration: 3000,
+            once: true,
         });
     </script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
@@ -173,6 +217,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="assets/js/languageAdd.js"></script>
 </body>
 
 </html>
